@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'net.phoenix'
-version = '1.0.4'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
@@ -27,5 +27,6 @@ compileJava {
             '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
             '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
             '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
     ]
 }
